Desktop Design Complete

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Module-2</title>
+</head>
+<body>
+    <div id="header">
+        <h1>Our Menu</h1>
+    </div>
+    <div id="menu">
+        <div class="item-1">
+            <h3 class="title-1">Chicken</h3>
+            <p class="contenido">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore at eveniet. Asperiores dolores nulla rem, unde cum reprehenderit nobis saepe voluptate fuga ex doloremque, numquam cumque dignissimos architecto aliquid. </p>
 
+        </div>
+        <div class="item-2">
+            <h3 class="title-2">Beef</h3>
+            <p class="contenido">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore at eveniet. Asperiores dolores nulla rem, unde cum reprehenderit nobis saepe voluptate fuga ex doloremque, numquam cumque dignissimos architecto aliquid. </p>
+        </div>
+        <div class="item-3">
+            <h3 class="title-3">Sushi</h3>
+            <p class="contenido">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat labore at eveniet. Asperiores dolores nulla rem, unde cum reprehenderit nobis saepe voluptate fuga ex doloremque, numquam cumque dignissimos architecto aliquid. </p> 
+
+        </div>
+
+    </div>
+    
+</body>
+</html>
